2009-12-30  Gilles Casse <gcasse@oralux.org>
 
	* src/modules/ibmtts.c, config/modules/ibmtts.conf: 
	  - module_list_voices returns the list of the installed languages,
	  - the encoding associated to each language has been updated (same values as in Gnome Speech Viavoice driver).
	  - the IbmttDialect and the list of possible voices have been removed from the ibmtts.conf file.

2009-07-08  Luke Yelavich <luke.yelavich@canonical.com>

	* src/server/config.c (load_default_global_set_options): Set the default
	audio output to "pulse,alsa".

	* config/speechd.conf.in: Set the default audio output to
	"pulse,alsa".

2009-06-23  Luke Yelavich <luke.yelavich@canonical.com>

	* src/server/config.c: Add new macro GLOBAL_SET_LOGLEVEL, to set the
	log level for both the server and speech modules. Make use of this
	macro when reading the LogLevel setting from the configuration file.

	* src/server/output.c (output_send_loglevel_setting): Fix typo.

	* src/modules/module_utils.c:
	  - Add new macro SET_LOGLEVEL_NUM to set the log level variable for
	    speech modules.
	  - Add new function do_loglevel, to retrieve and call the above
	    mentioned macro to set the log level.
	  - Add a call to spd_audio_set_loglevel to the SET_LOGLEVEL_NUM macro.

	* src/modules/module_main.c (main): Add a call to do_loglevel to set
	the log level for the module.

	* src/audio/alsa.c:
	  - Adjust the MSG macro to take the log level setting 	into account
	    before logging a message.
	  - Assign all log messages to a log level.

	* src/audio/oss.c:
	  - Adjust the MSG macro to take the log level setting into account
	    before logging a message.
	  - Assign all log messages to a log level.

	* src/audio/spd_audio.c: Add a new function spd_audio_set_loglevel to
	set the internal log_level variable for the libspdaudio library.

2009-06-22  Luke Yelavich <luke.yelavich@canonical.com>

	* src/server/output.c: Add output_send_loglevel_setting function