@@ -1,3 +1,8 @@
+2009-01-17  Gilles Casse <gcasse@oralux.org>
+ 
+	* src/modules/ibmtts.c: 
+	  - fix MAX_NB_OF_LANGUAGES.
+
 2009-12-30  Gilles Casse <gcasse@oralux.org>
  
 	* src/modules/ibmtts.c, config/modules/ibmtts.conf: 
